k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linked-data-training
spec:
  template:
    spec:
      containers:
        - name: linked-data-training
          image: ghcr.io/zazuko/linked-data-training
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 10Mi
            limits:
              cpu: 200m
              memory: 30Mi

          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              port: 80
              path: /

          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              port: 80
              path: /
