k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linked-data-training
  annotations:
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: linked-data-training-zazuko-com.zazuko.net
spec:
  tls:
    - secretName: linked-data-training-zazuko-com-cert
      hosts:
        - linked-data-training.zazuko.com
  rules:
    - host: linked-data-training.zazuko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linked-data-training
                port:
                  number: 80
